--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     <ul>
                         <li><a href="https://www.linkedin.com/in/kyratna/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="https://twitter.com/ky_ratna" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href = "cp_page.html" target="_blank"><i class="fas fa-terminal" aria-hidden="true"></i></a></li>
                         <li><a href="https://github.com/kyratna" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                         <li><a href="https://www.instagram.com/ky_ratna" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                         <li><a href = "cp_page.html" target="_blank"><i class="fas fa-terminal" aria-hidden="true"></i></a></li>
-                         <li><a href="#conscr"><i class="far fa-address-card" aria-hidden="true"></i></a></li>
+                        <li><a href="#conscr"><i class="far fa-address-card" aria-hidden="true"></i></a></li>
                     </ul>
                     
                     <br>
@@ -168,11 +168,10 @@
 
 <div class="social-icons">
 <ul>
+        <a href="#homescr" target="_blank"><li><i class="fa fa-home"></i></li></a>
         <a href="https://www.linkedin.com/in/kyratna/" target="_blank"><li><i class="fa fa-linkedin"></i></li></a>
-        <a href="https://twitter.com/ky_ratna" target="_blank"><li><i class="fa fa-twitter"></i></li></a>
-        <a href="https://github.com/kyratna" target="_blank"><li><i class="fa fa-github"></i></li></a>
-        <a href="https://www.instagram.com/ky_ratna" target="_blank"><li><i class="fa fa-instagram"></i></li></a>
         <a href="cp_page.html" target="_blank"><li><i class="fas fa-terminal"></i></li></a>
+    <a href="#conscr"><li><i class="far fa-address-card"></i></li></a>
         
 </ul>
 </div>
